# zk-auctions

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .rusty-hook.toml  Cargo.toml  README copy.md  README.md  auction_specification_model.org  index.html  readme.org  submodules-changes.patch
.github/workflows/: build-cashe.yml  pre-commit.yaml  static-analysis.yaml  test-coverage.yaml  test.yaml
application/: Cargo.toml
application/examples/: mock_parallel_main.rs  parallel_main.rs
application/src/: auctioneer_thread.rs  bidder_thread.rs  lib.rs  mock_auctioneer_thread.rs  mock_bidder_thread.rs  shared_types.rs  thread_output.rs
core/: Cargo.toml
core/src/: GM.rs  gm.rs  lib.rs  number.rs  proofs.rs  testGM.rs  utils.rs
core/src/protocols/: strain.rs
core/src/protocols/strain/: auctioneer.rs  bidder.rs  mod.rs  soundness.rs  verified_receipt.rs
docs/: auction_specification_model.html  index.html
logs/: readme.txt
methods/: Cargo.toml
methods/auctioneer-verify/: Cargo.toml
methods/auctioneer-verify/src/: main.rs
methods/bidder-join/: Cargo.toml
methods/bidder-join/src/: main.rs
methods/bidder-prover/: Cargo.toml
methods/bidder-prover/src/: main.rs
methods/bidder-verify/: Cargo.toml
methods/bidder-verify/src/: main.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs  utils.rs
protocols/: Cargo.toml
protocols/src/: lib.rs  strain.rs
src/: auctioneer_host.rs  bidder_host.rs  lib.rs  main.rs
src/examples/: mod.rs  web_server.rs
src/host/: mod.rs
src/strain/: auctioneer.rs  bidder.rs  mock_auctioneer.rs  mock_bidder.rs  mod.rs
