[package]
name = "zk-auctions"
version = "0.1.0"

[dependencies]
zk-auctions-core = { path = "core" }
zk-auctions-methods = { path = "methods" }
risc0-zkvm = "1.1.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
prove = ["risc0-zkvm/prove"]

