[package]
name = "zk-auctions-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
num-bigint = { version = "0.4.6", features = ["rand", "serde"]}
num-iter = "0.1.45"
num-traits = "0.2.19"
num-integer = "0.1.46"
rand_chacha = "0.3.1"
risc0-zkvm = { version = "1.2.2", default-features = false, features = ['std', 'getrandom', 'client', 'heap-embedded-alloc'] }
