[package]
name = "zk-auctions-methods"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-zkvm = { version = "1.2.2", default-features = false, features = ['std', 'getrandom', 'heap-embedded-alloc'] }
risc0-build = "1.2.2"

[package.metadata.risc0]
methods = ["bidder-join", "bidder-prover"]
