[package]
name = "bidder-verify"
version = "0.1.0"
edition = "2021"


[dependencies]
risc0-zkvm = { version = "1.2.2", default-features = false, features = ['std'] }
zk-auctions-core = { path = "../../core" }
#zk-auctions-methods = { path = ".." }
num-bigint = { version = "0.4.6", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }