[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
zk-auctions-core = { path = "../../core" }
risc0-zkvm = { version = "1.2.2", default-features = false, features = ['std', 'getrandom', 'heap-embedded-alloc'] }
serde = { version = "1.0", default-features = false }
rand = "0.8.5"
sha2 = "0.10.8"
num-bigint = { version = "0.4.6", features = ["rand", "serde"]}
num-traits = "0.2.19"
num-integer = "0.1.46"
rand_chacha = "0.3.1"
